--- a/frontend/natiart-app/src/app/product/components/customer/cart-modal/cart-modal.component.html
+++ b/frontend/natiart-app/src/app/product/components/customer/cart-modal/cart-modal.component.html
@@ -20,7 +20,7 @@
                 </div>
               }
             </div>
-            <div class="flex-grow">
+            <div class="grow">
               <p class="font-semibold">{{ item.product.label }}</p>
               @if (item.goldBorder) {
                 <p class="mt-1 text-sm font-medium text-yellow-600">With Gold Border</p>
