--- a/frontend/natiart-app/src/app/product/components/customer/dashboard/dashboard.component.html
+++ b/frontend/natiart-app/src/app/product/components/customer/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
 
 <div class="flex">
   <app-left-menu class="w-64 min-h-screen"></app-left-menu>
-  <main class="flex-grow">
+  <main class="grow">
     <div class="container mx-auto px-4">
       <app-product-list type="featured" title="Featured Products"></app-product-list>
       <app-product-list type="new" title="New Products"></app-product-list>
