--- a/frontend/natiart-app/src/app/product/components/customer/product-detail/product-detail.component.html
+++ b/frontend/natiart-app/src/app/product/components/customer/product-detail/product-detail.component.html
@@ -4,7 +4,7 @@
 
 <div class="flex">
   <app-left-menu class="w-64 min-h-screen hidden lg:block"></app-left-menu>
-  <main class="flex-grow">
+  <main class="grow">
     @if (product$ | async; as product) {
       <div class="container mx-auto px-4 py-8">
         <div class="flex flex-wrap -mx-4">
