--- a/frontend/natiart-app/src/app/product/components/customer/shipping-estimation/shipping-estimation.component.html
+++ b/frontend/natiart-app/src/app/product/components/customer/shipping-estimation/shipping-estimation.component.html
@@ -44,7 +44,7 @@
         @case ('success') {
           <div aria-live="polite" class="bg-green-50 border-l-4 border-green-400 p-4">
             <div class="flex">
-              <div class="flex-shrink-0">
+              <div class="shrink-0">
                 <svg aria-hidden="true" class="h-5 w-5 text-green-400" fill="currentColor"
                   viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                   <path clip-rule="evenodd"
@@ -66,7 +66,7 @@
         @case ('no-options') {
           <div aria-live="polite" class="bg-yellow-50 border-l-4 border-yellow-400 p-4">
             <div class="flex">
-              <div class="flex-shrink-0">
+              <div class="shrink-0">
                 <svg aria-hidden="true" class="h-5 w-5 text-yellow-400" fill="currentColor"
                   viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                   <path clip-rule="evenodd"
@@ -86,7 +86,7 @@
         @case ('error') {
           <div aria-live="assertive" class="bg-red-50 border-l-4 border-red-400 p-4">
             <div class="flex">
-              <div class="flex-shrink-0">
+              <div class="shrink-0">
                 <svg aria-hidden="true" class="h-5 w-5 text-red-400" fill="currentColor" viewBox="0 0 20 20"
                   xmlns="http://www.w3.org/2000/svg">
                   <path clip-rule="evenodd"
