--- a/frontend/natiart-app/src/styles.css
+++ b/frontend/natiart-app/src/styles.css
@@ -1,7 +1,5 @@
 /* You can add global styles to this file and also import other style files */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
 
 :root {
   --primary: 212 165 154;
