--- a/frontend/natiart-app/src/app/product/components/customer/checkout/user-info-step/user-info-step.component.css
+++ b/frontend/natiart-app/src/app/product/components/customer/checkout/user-info-step/user-info-step.component.css
@@ -1,4 +1,4 @@
-@reference "tailwindcss";
+@reference "../../../../../../styles.css";
 
 .form-input {
   @apply w-full px-3 py-2 text-base text-secondary bg-surface-variant border border-primary-lighter/50 rounded-md shadow-sm;
